polr/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  ports:
    - name: "3306"
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels: 
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: jfkapo-skhf7ej-ksfuhlw
            - name: MYSQL_DATABASE
              value: polr
          image: mariadb:latest
          name: mariadb
      restartPolicy: Always
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb-pvc
